RESOLVED FIXED302983
[Site Isolation] Coalesced mouse events have incorrect positions in cross-origin frames
https://bugs.webkit.org/show_bug.cgi?id=302983
Summary [Site Isolation] Coalesced mouse events have incorrect positions in cross-ori...
Lily Spiniolas
Reported 2025-11-21 16:00:33 PST
Attachments
Lily Spiniolas
Comment 1 2025-11-21 16:07:03 PST
EWS
Comment 2 2025-11-23 15:36:13 PST
Committed 303470@main (6bb311627697): <https://commits.webkit.org/303470@main> Reviewed commits have been landed. Closing PR #54354 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.