[Site Isolation] Coalesced mouse events have incorrect positions in cross-origin frames https://bugs.webkit.org/show_bug.cgi?id=302983 rdar://164863355

Reviewed by Abrar Rahman Protyasha.

For each mouse event sent to a remote frame, we now calculate the difference between
the original point and the transformed point and apply it to each of the coalesced event
positions.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::mouseEventHandlingCompleted):

Canonical link: https://commits.webkit.org/303470@main